# LifeSim

./: .gitignore  CMakeLists.txt  GPATH  GRTAGS  GSYMS  GTAGS  README.md  TODO  depends  k  main.cpp  penappsapp.odt  perfect_numbers.ml  run_editor.cpp  run_tests.cpp
include/googletest/make/: sample1_unittest
include/imgui/: imconfig.h  imgui.h
lib/: your_test
lua_scripts/: script.lua
lua_scripts/actions/: Action.lua  ActionEat.lua  ActionThrowRock.lua
lua_scripts/collision/: FireballCollision.lua  GenericWallCollision.lua  ZeroRestitutionWallCollision.lua
lua_scripts/collision/character/: CharacterCollision.lua
lua_scripts/entities/enviroment/: Rock.lua
lua_scripts/entities/items/: fireball.lua
lua_scripts/entities/test/: AnimationTestEntity.lua  CollisionTestEntity1.lua  CollisionTestEntity2.lua  CollisionTestScript.lua  GraphicsTestEntity.lua  HealthTestEntity.lua  MoveableGraphicsTestEntity.lua  TestComponentEnitity1.lua  TestComponentEntity2.lua  TestEntity.lua
lua_scripts/entity/test/: TestEntity.lua
lua_scripts/items/: TestItem.lua  TestItemAction.lua
lua_scripts/stages/: TestStage.lua
lua_scripts/state/character_state/: CharacterAttackingState.lua  CharacterGlobalState.lua  CharacterIdleState.lua  CharacterWalkingState.lua
lua_scripts/states/character_state/: CharacterAttackingState.lua  CharacterGlobalState.lua  CharacterIdleState.lua  CharacterJumpState.lua  CharacterWalkingState.lua
lua_scripts/states/test/: TestTransitionState1.lua
lua_scripts/systems/: AnimationSystem.lua  CollisionSystem.lua  DamageOnCollisionSystem.lua  DamageSystem.lua  DrawEntitySystem.lua  DrawGraphicsSystem.lua  DrawUISystem.lua  DynamicsSystem.lua  EntityAnimationSystem.lua  ForwardAnimationSystem.lua  GraphicsSystem.lua  GravitySystem.lua  HealthSystem.lua  KeyboardInputSystem.lua  RegenerationSystem.lua  SpawningEntitySystem.lua  StateSystem.lua  TestSystem1.lua  TestSystem2.lua  TestSystem3.lua
lua_scripts/test_scripts/: GlobalStateTest.lua  TestTransitionState1.lua  TestTransitionState2.lua
lua_scripts/tiles/: TestTile.lua
lua_scripts/ui/: HealthWidget.lua
lua_scripts/world/instances/: TestInstance.lua
lua_scripts/world/stages/: TestStage.lua
lua_scripts/world/tiles/: BlankTile.lua  TestTile.lua  TestTile2.lua
res/engine_configs/: engine_conf.json
res/lua_scripts/actions/: ActionShootFireball.lua
res/lua_scripts/collision/: FireballCollision.lua  GenericWallCollision.lua  ZeroRestitutionWallCollision.lua
res/lua_scripts/states/: StateHelpers.lua
res/lua_scripts/systems/: AnimationSystem.lua  CollisionSystem.lua  DamageSystem.lua  DrawGraphicsSystem.lua  DynamicsSystem.lua  GravitySystem.lua  LifeTimeSystem.lua  MovementSystem.lua  RegenerationSystem.lua  SpawningEntitySystem.lua  StateSystem.lua
res/lua_scripts/ui/: OverLay.lua
res/tile_maps/: .pmidgM  TestTileMap.txt  arena.pmidgM  boop.pmidgM  collision_test.pmidgM  dynamics_test.pmidgM  gerdy.pmidgM  gg.pmidgM  hhh.pmidgM  hhhh.pmidgM  hhhhhh.pmidgM  kk.pmidgM  large_map.pmidgM  ll.pmidgM  mario.pmidgM  mario_level.pmidgM  mario_world.pmidgM  new_mario.pmidgM  new_test.pmidgM  poop.pmidgM  poop_doopy_loopy.pmidgM  rocks.pmidgM  test.pmidgM  test22.pmidgM  yyyy.pmidgM
res/ui/: HealthWidget.lua
res/ui/all/: UI.json
res/world/instances/:  c.pmidgI.lua  b.pmidgI.lua  bj.pmidgI.lua  bn.pmidgI.lua  c.pmidgI.lua  cx.pmidgI.lua  d.pmidgI.lua  (+52 more)
src/: main.cpp  program.dot
src/component/: Component.h  ComponentUser.cpp  ComponentUser.h  ComponentUserBase.cpp  ComponentUserBase.h  ComponentUserBaseEvent.h  ComponentUserBaseSubscriber.h  ComponentUserListener.h  ComponentUserType.cpp  ComponentUserType.h  ComponentUserTypes.h  LuaComponent.cpp  LuaComponent.h  LuaComponentUser.h
src/controllers/: Controller.h  ControllerBase.h  ControllerFactory.h  ControllersSystem.h  IODevice.h  Keyboard.h  KeyboardController.cpp  KeyboardController.h  KeyboardPlayerController.h  KeyboardSideScrollerPlayerController.cpp  KeyboardSideScrollerPlayerController.h  PlayerController.h  SideScrollerPlayerInterface.h  TBArcadeController.h  TBArcadeControllerPacket.h  TBArcadeControllerService.h  TBSideScrollerArcadeController.h
src/decorator/: ComponentsDecorator.h  Decorated.h  EventHandlingDecorator.h  LuaComponentsDecorator.h  LuaDecorated.h  LuaEventHandlingDecorator.cpp  LuaEventHandlingDecorator.h  LuaUseableDecorator.h  UseableDecorator.h
src/engine/: Engine.h
src/event/: EngineEventManager.cpp  EngineEventManager.h  Event.h  EventManager.cpp  EventManager.h  EventSubscriber.h  EventType.cpp  EventType.h  Subscription.h
src/game/: EditorRunner.h  EngineGlobals.cpp  EngineGlobals.h  FPSRunnable.h  FPSRunner.cpp  FPSRunner.h  GameRunner.cpp  GameRunner.h  GameState.cpp  GameState.h  PMIDGGameRunner.cpp  PMIDGGameRunner.h  PMIDGRunner.cpp  PMIDGRunner.h  TBGameRunner.cpp  TBGameRunner.h  TBRunner.cpp  TBRunner.h
src/game_objects/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  LuaEntity.cpp  LuaEntity.h  LuaEntityFactory.h
src/gui/: DevelopmentOverlay.cpp  GameWindow.cpp  GameWindow.h  SFMLHelloWorld.cpp  TextureCache.cpp
src/system/: GameSystemController.h  ScriptableSystem.cpp  ScriptableSystem.h  System.h  SystemController.cpp  SystemController.h  SystemFactory.cpp  SystemFactory.h
src/ui/: BaseUI.cpp  BaseUI.h  BoxContainer.h  Container.h  Layout.h  LayoutFactory.h  LuaUIElement.h  RelativeLayout.cpp  RelativeLayout.h  UI.cpp  UI.h  UIElement.cpp  UIElement.h  UIElementFactory.h  UIElementTypes.h
src/utils/: Globals.cpp  Globals.h  LuaBindings.h  LuaUniversal.h  OneScriptFactoryToRuleThemAll.h  ResourceFactory.h  ScriptFactory.h  Statics.h  macros.h
test/: ActionsTest.h  ConditionTest.h  NutritionTest.h
test/engine/: EngineTest.h
test/events/: EventManagerTest.h
test/game/: GameRunnerTest.h  GameRunnerTimed.h
test/gui/: UIOverlay.h
test/lua_tests/: ActionScriptTest.h  LuaBridgeTest.h  LuaTest.h
test/output/: test_output
test/protobuf/: GameStateProtoBufTest.h
test/ui/: JsonUITest.h  UITest.h
test/world/: InstanceTest.h  StageTest.h  TileMapTest.h
(+273 files in other folders)
